# aurora

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
doc/: benchmark.md  developer_guide.md  glossary.md  windows.md
src/: .gitignore  main.cc
src/binlog/: binlog_meta_data.cc  binlog_meta_data.h  binlog_operator.cc  binlog_operator.h  binlog_singleton.cc  binlog_singleton.h
src/candidate/: candidate_request.cc  candidate_request.h  candidate_view.cc  candidate_view.h
src/client/: client_base.cc  client_base.h  client_framework.cc  client_framework.h  client_impl.cc  client_impl.h
src/common/: comm_defs.cc  comm_defs.h  comm_view.cc  comm_view.h  error_code.h  log_identifier.cc  log_identifier.h  macro_manager.h  memory_log_base.cc  memory_log_base.h  react_base.cc  react_base.h  react_group.cc  react_group.h  request_base.cc  request_base.h
src/config/: config.cc  config.h
src/election/: election.cc  election.h
src/follower/: follower_bg_task.cc  follower_bg_task.h  follower_request.cc  follower_request.h  follower_view.cc  follower_view.h  memory_log_follower.cc  memory_log_follower.h
src/global/: global_env.cc  global_env.h
src/gtest/: gtest_main.cc  test_all.h  test_base.h
work/: .test.sh.un~  benchmark.sh  election.config.reserve  gtest_note.txt  membership-change.config.reserve  raft.binlog.election-0  raft.binlog.election-1  raft.binlog.election-2  raft.binlog.follower  raft.binlog.leader  raft.binlog.setHead  raft.binlog.test  restart_followers.sh  test.sh  topology.config  topology.config.memchg  topology.config.reserve
(+127 files in other folders)
